log
Tue, Apr 29, 2025  5:47:36 PM: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
5729e4d
Tue, Apr 29, 2025  6:00:15 PM: 
 treemap.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:66:13: error: expected expression before '}' token
             }
             ^
treemap.c:66:13: error: 'return' with a value, in function returning void [-Werror]
treemap.c:53:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
81c1714
Tue, Apr 29, 2025  6:03:34 PM: 
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:66:13: error: expected expression before '}' token
             }
             ^
treemap.c:66:13: error: 'return' with a value, in function returning void [-Werror]
treemap.c:53:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
79c78a9
Tue, Apr 29, 2025  6:05:44 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
6164a0f
Tue, Apr 29, 2025  6:12:28 PM: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  8|5
total_score: 15/70
91430a1
Tue, Apr 29, 2025  6:19:32 PM: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  15|4
total_score: 25/70
3f6351b
Tue, Apr 29, 2025  6:30:32 PM: 
 treemap.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:124:6: error: 'else' without a previous 'if'
     }else{
      ^~~~
d1c9160
Tue, Apr 29, 2025  6:34:14 PM: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
b958536
Tue, Apr 29, 2025  6:40:05 PM: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
baed675
Tue, Apr 29, 2025  6:45:35 PM: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  25|1
total_score: 60/70
46dbd34
Tue, Apr 29, 2025  6:50:48 PM: 
 treemap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:175:13: error: 'candidate' undeclared (first use in this function)
             candidate = current;
             ^~~~~~~~~
treemap.c:175:13: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:185:12: error: 'NUll' undeclared (first use in this function)
     return NUll;
            ^~~~
treemap.c:168:16: error: unused variable 'result' [-Werror=unused-variable]
     TreeNode * result = NULL;
                ^~~~~~
treemap.c:187:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
a6304e9
